Copy and past sensitivity figures and text into modeling.tex

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -688,7 +688,7 @@ pages = {274-284}
 }
 
 @article{Moteetal1996,
-author = {Mote, P. W. and Coauthors},
+author = {Mote, P. W. and K. H. Rosenlof and M. E. McIntyre and E. S. Carr and J. C. Gille and J. R. Holton and J. S. Kinnersley and H. C. Pumphrey and J. M. Russell III and J. W. Waters},
 year = {1996},
 title = {{An atmospheric tape recorder: The imprint of tropical tropopause temperature on stratospheric water vapor}},
 journal = JGR,
