--- a/modeling.tex
+++ b/modeling.tex
@@ -115,7 +115,7 @@ This indicates that the budget accurately represents the model variability, whic
 In the tropopause layer, some of the budget terms are small enough to be ignored.
 To determine which of the budget terms are most important, a time series of the contribution of each of the budget terms in Eq. \ref{eq:dthetadt} to the tropopause-layer static stability tendency is plotted in Fig.~\ref{fig:avgbudterms}.
 For this figure, each of the budget terms is computed using the method described in Section 3, except with 1-hour averaging intervals instead of 24-hour intervals.
-The absolute values of these tendencies are then averaged over the radius-height domain of the plots shown in Fig.~\ref{fig:mod+bud+res} and plotted as a time series\footnote{It will be seeen in subsequent figures that each of the terms contributes both positively and negatively to the $N^2$ tendency within the analysis domain.
+The absolute values of these tendencies are then averaged over the radius-height domain of the plots shown in Fig.~\ref{fig:mod+bud+res} and plotted as a time series\footnote{It will be seen in subsequent figures that each of the terms contributes both positively and negatively to the $N^2$ tendency within the analysis domain.
 Thus, taking an average over the domain tends to wash out the positive and negative contributions.
 To circumvent this problem, the absolute value of each of the terms is averaged.}.
 Advection (Fig.~\ref{fig:avgbudterms}, red line) plays an important role in the mean tropopause-layer static stability tendency at all times, and vertical turbulence (Fig.~\ref{fig:avgbudterms}, blue line) and radiation (Fig.~\ref{fig:avgbudterms}, dark green line) also contribute significantly.
@@ -164,7 +164,7 @@ Outside of the eye, the $N^2$ evolution exhibited alternating layers of positive
 Near and above 18 km existed an upward-sloping region of decreasing $N^2$ that extended out to the 180-km radius.
 In this region, neither vertical turbulence nor radiation exhibited negative $N^2$ tendencies; advection was the only forcing for this destabilization.
 Immediately below this layer, just above the cold-point tropopause, was a region of increasing $N^2$ that sloped upward from 17 km near the 30-km radius to just below 18 km outside of the 100-km radius.
-Advection and vertical turbulence both contributed to this positive $N^2$ tendency, with advection playing an important role below about 17.5 km and and turbulence playing an important role above.
+Advection and vertical turbulence both contributed to this positive $N^2$ tendency, with advection playing an important role below about 17.5 km and turbulence playing an important role above.
 The sum of advection and turbulence (Fig.~\ref{fig:stab-24-48}e) reveals two separate regions of increasing $N^2$ in the 17-18-km layer rather than one contiguous region.
 The addition of radiation to these two terms, however, (Fig.~\ref{fig:stab-24-48}f) provides the link between these two regions, indicating that radiation also plays a role in strengthening the stable layer just above the tropopause.
 In the 16-17-km layer, just below the cold-point tropopause, a horizontally-extensive layer of destabilization also was forced by a combination of advection, vertical turbulence, and radiation.
@@ -175,7 +175,7 @@ The sum of advection, vertical turbulence, and radiation (Fig.~\ref{fig:stab-24-
 
 \paragraph{48-72 hours}\mbox{}\\
 \indent After the storm's maximum wind speed leveled off near 80 m s\textsuperscript{-1} (Fig.~\ref{fig:vmax+pmin}a), the magnitude of the static stability tendencies within the eye decreased to near zero (Fig.~\ref{fig:stab-48-72}a).
-Outside of the eye, however, $N^2$ continued to decrease in the layer immediately sorrounding the tropopause and increase just above.
+Outside of the eye, however, $N^2$ continued to decrease in the layer immediately surrounding the tropopause and increase just above.
 The sum of advection and vertical turbulence (Fig.~\ref{fig:stab-48-72}e) indicates that these two processes account for most of the destabilization near the tropopause and some of the stabilization near the 18-km altitude.
 Below the tropopause, however, these two terms provided strong forcing for stabilization that was not observed in the budget change (Fig.~\ref{fig:stab-48-72}a).
 Radiation (Fig.~\ref{fig:stab-48-72}d), which generally forced stabilization above 17 km and destabilization below, balanced out this forcing for stabilization in the upper troposphere.
@@ -199,7 +199,7 @@ These nonzero tendencies were related to the development of the TC's secondary c
 
 %The eye was characterized by stabilization below 16 km and destabilization in the 16-17-km and 18-19-km layers.
 %Comparing Fig.~\ref{fig:stab-24-48}b to \ref{fig:adv-24-48}a,b reveals that the stabilization below 16 km in the eye was forced by vertical advection, as was the region of destabilization in the 18-19-km layer.
-%Meanwhile, the destabilization that occurred in the 16-17-km layer was forced by a combination and radial and vertial advection.
+%Meanwhile, the destabilization that occurred in the 16-17-km layer was forced by a combination and radial and vertical advection.
 
 %Outside of the eye, the layer below about 15.5 km was dominated by stabilization.
 %Outside of the 50-km radius, horizontal advection provided the forcing for this stabilization, while inside of the 50-km radius, vertical advection was responsible.
@@ -238,7 +238,7 @@ These nonzero tendencies were related to the development of the TC's secondary c
 %Surprisingly, the 0-20-km radius was characterized by mean ascent, even up to the 21-km level.
 %Inward-propagating waves, upon reaching r=0, induced dipoles of strong upward and downward vertical motion.
 %For reasons that remain unclear, the regions of ascent tended to last longer than the regions of subsidence induced by these waves, which is responsible for the dominance of ascent in the mean.
-%In this region of mean ascent, changes in the vertical gradint of mean vertical velocity are responsible for alternating regions of positive and negative $N^2$ tendencies.
+%In this region of mean ascent, changes in the vertical gradient of mean vertical velocity are responsible for alternating regions of positive and negative $N^2$ tendencies.
 %
 %HOVMOLLER OF w IN THE LOWER STRATOSPHERE??
 
@@ -259,10 +259,10 @@ This mechanism is the same as that discussed in \cite{TrierSharman2009}, in whic
 %Advection of $N^2$ by the radial wind (first term on the right-hand side of Eq. \ref{eq:advtend}) also acted within the outflow jet.
 %For example, horizontal advection provided forcing for destabilization at the 16-km level almost everywhere inside of the 140-km radius.
 %Outside of this radius near 16 km, however, existed a region of forcing for stabilization.
-%This switch in signs was a consequence of a reversal of the radial graident of mean $N^2$ near the 140-km radius (Fig.~\ref{fig:n2-24hr-avgs}b).
+%This switch in signs was a consequence of a reversal of the radial gradient of mean $N^2$ near the 140-km radius (Fig.~\ref{fig:n2-24hr-avgs}b).
 %Inside of that radius, $(\partial/\partial r)(\partial \theta/\partial z) > 0$ and $u > 0$, which corresponds to forcing for destabilization in Eq. \ref{eq:advtend}; outside of that radius $(\partial/\partial r)(\partial \theta/\partial z) < 0$ and $u > 0$, which corresponds to forcing for stabilization.
 %
-%The relative imporance of the first and third terms on the right-hand side of Eq. \ref{eq:advtend} is difficult to ascertain, but the structure of the mean radial velocity, $\theta$, and $N^2$ fields suggests that both terms are contributing within the outflow layer.
+%The relative importance of the first and third terms on the right-hand side of Eq. \ref{eq:advtend} is difficult to ascertain, but the structure of the mean radial velocity, $\theta$, and $N^2$ fields suggests that both terms are contributing within the outflow layer.
 
 Meanwhile in the lower stratosphere, a thin layer of 2-4 m s\textsuperscript{-1} inflow developed a few hundred meters above the tropopause, similar to that which was observed in Hurricane Patricia (2015; \citeauthor{DuranMolinari2018} \citeyear{DuranMolinari2018}) and in previous modeling studies (e.g. \citeauthor{OhnoSatoh2015} \citeyear{OhnoSatoh2015}; \citeauthor{Kieuetal2016} \citeyear{Kieuetal2016}).
 Since the isentropes in this layer sloped slightly upward with radius (i.e. $\partial \theta/\partial r < 0$), this inflow acted to import lower $\theta$ air from outer radii to inner radii.
@@ -339,6 +339,27 @@ Comparison of these turbulent regions to the $N^2$ tendencies in Figs. \ref{fig:
 Just outside of these layers, however, vertical turbulence acted to increase $N^2$.
 The large vertical gradient of vertical eddy diffusivity near the tropopause played an important role in developing the lower-stratospheric stable layer during RI.
 These results support the hypothesized role of turbulence in setting the outflow-layer $\theta$ stratification in \cite{RotunnoEmanuel}.
+
+  \section{Sensitivity experiments}
+The simulations exhibited some sensitivity to the initial thermodynamic profile and the prescribed vertical mixing length.
+Although the details of the intensification and the tropopause-layer $N^2$ evolution varied when these quantities were changed, the conclusions of the paper remain unchanged.
+
+%%% Appendix section numbering (note, skip \section and begin with \subsection)
+ \subsection{Sensitivity to the initial thermodynamic profile}
+A number of sensitivity experiments were conducted using a variety of initial soundings.
+Changing the initial temperature and humidity profiles affected the timing of the onset of organized deep convection and the rapidity of intensification.
+In all simulations, however, convection eventually penetrated to the tropopause, at which time vertical turbulence and radiation combined with advection to adjust the $N^2$ profile toward that which was observed in the control run.
+By the end of the RI period in every simulation, all three processes were actively modifying the $N^2$ profile near the tropopause.
+
+As an example, 24-hour averages of $N^2$ are plotted in Fig. A1 for a simulation that was identical to that used in this paper, except the initial sounding was determined by averaging every CFSR grid point within 1000 km of TC Patricia's storm center at 18 UTC 21 October 2015 instead of averaging only within the 100-km radius.
+Although the lower-stratospheric stable layer developed more slowly and was weaker than that shown in Fig.~\ref{fig:n2-24hr-avgs}, the overall evolution was quite similar and the same budget terms dominated the $N^2$ evolution.
+
+ \subsection{Sensitivity to the vertical mixing length}
+The rate of turbulent mixing in the Smagorinsky scheme used herein is highly dependent on a prescribed length scale.
+The vertical mixing length used in this paper (100 m) was based on the sensitivity experiments of \cite{Bryan2012}.
+Prescribing a smaller mixing length produces smaller $\theta$ tendencies due to turbulence, but even with a mixing length on the low end of those tested by \cite{Bryan2012}, turbulence still played an important role in the tropopause-layer $N^2$ evolution.
+Fig. A2 shows the 24-hour-averaged contributions of turbulent mixing to the $N^2$ evolution from a simulation identical to that used in this paper, except with a vertical mixing length of 50 m.
+At all times, vertical turbulence still played an important role in the tropopause-layer $N^2$ evolution, particularly during the latter stages of RI (48-72 hours).
 
   \section{Conclusions}
 The simulated $N^2$ evolution shown herein closely matched that observed during the RI of Hurricane Patricia (2015).
@@ -474,26 +495,26 @@ Orange lines represent the cold-point tropopause height averaged over the 0-24-h
 
 %FIGURE 12%
 \begin{figure*}[ht]
-\centerline{\includegraphics[width=19pc]{figures/fulltrop.png}}
+\centerline{\includegraphics[width=39pc]{figures/n2-1000km.png}}
+\caption{Twenty-four-hour averages of squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours, and (d) 72-96 hours for the simulation described in Section ??. Orange lines represent the cold-point tropopause height averaged over the same time periods.}
+\label{fig:n2-1000km}
 \end{figure*}
+
+%FIGURE 13%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/turb-50m.png}}
+\caption{The contribution of vertical turbulence to the $N^2$ variability (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) averaged over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours, and (d) 72-96 hours for the simulation described in Section ??. Orange lines represent the cold-point tropopause height averaged over the same time periods.}
+\label{fig:turb-50m}
+\end{figure*}
+
+%FIGURE 14%
+\begin{figure}[ht]
+\centerline{\includegraphics[width=19pc]{figures/fulltrop.png}}
+\end{figure}
 \begin{figure}
 \caption{(Top panel) Change in $N^2$ over the 24-48-hour period (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) directly output by the model for the 0-21-km layer. (Middle panel) Vertical eddy diffusivity (m\textsuperscript{2} s\textsuperscript{-2}) averaged over the same time period. (Bottom panel) Radiative heating rate (K h\textsuperscript{-1}) averaged over the same time period.}
 \label{fig:fulltrop}
 \end{figure}
-
-%%FIGURE A1%
-%\begin{figure*}[ht]
-%\centerline{\includegraphics[width=39pc]{figures/n2-1000km.png}}
-%\appendcaption{A1}{Twenty-four-hour averages of squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours, and (d) 72-96 hours for the simulation described in Appendix Aa. Orange lines represent the cold-point tropopause height averaged over the same time periods.}
-%\label{fig:n2-1000km}
-%\end{figure*}
-%
-%%FIGURE A2%
-%\begin{figure*}[ht]
-%\centerline{\includegraphics[width=39pc]{figures/turb-50m.png}}
-%\appendcaption{A2}{The contribution of vertical turbulence to the $N^2$ variability (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) averaged over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours, and (d) 72-96 hours for the simulation described in Appendix Ab. Orange lines represent the cold-point tropopause height averaged over the same time periods.}
-%\label{fig:turb-50m}
-%\end{figure*}
 
 %\begin{figure}[t]
 %\begin{figure}[t]
@@ -502,4 +523,3 @@ Orange lines represent the cold-point tropopause height averaged over the 0-24-h
 %  \caption{Enter the caption for your figure here.  Repeat as
 %  necessary for each of your figures. Figure from \protect\cite{Knutti2008}.}\label{f1}
 %\end{figure}
-
