Add panel labels to Figs. 5.3 and 5.4 and change captions.

--- a/hs3.tex
+++ b/hs3.tex
@@ -153,14 +153,14 @@ These results suggest that deep convection within TCs alters the vertical temper
 %FIGURE 3%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/nadine-skewt.png}}
-   \caption{(left) Infrared brightness temperature (\textdegree{}C) image of Hurricane Nadine at 2245 UTC 14 September 2012. Magenta, green, and blue stars represent dropsonde deployment locations corresponding to the three temperature soundings shown in the skew $T$--log $p$ diagram (right).}
+   \caption{(a) Infrared brightness temperature (\textdegree{}C) image of Hurricane Nadine at 2245 UTC 14 September 2012. Magenta, green, and blue stars represent dropsonde deployment locations corresponding to the three temperature soundings shown in (b) the skew $T$--log $p$ diagram.}
 \label{fig:nadine-skewt}
 \end{figure*}
 
 %FIGURE 4%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/nadine-n2}}
-\caption{Infrared brightness temperature (\textdegree{}C) images of Hurricane Nadine at (top left) 2315 UTC 14 September 2012 and (bottom left) 0015 UTC 15 September 2015. Digits represent dropsonde deployment locations. (right panels) Vertical cross sections of the squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) constructed using the dropsondes depicted in the left panels. Digits along the bottom of the cross-sections correspond to the dropsonde locations indicated in the left panels.}
+   \caption{Infrared brightness temperature (\textdegree{}C) images of Hurricane Nadine at (a) 2315 UTC 14 September 2012 and (c) 0015 UTC 15 September 2015. Digits represent dropsonde deployment locations. (b,d) Vertical cross sections of the squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) constructed using the dropsondes depicted in the left panels. Digits along the bottom of the cross-sections correspond to the dropsonde locations indicated in (a) and (c).}
 \label{fig:nadine-n2}
 \end{figure*}
 
